--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             filter: dropshadow(color=#001, offx=0, offy=0);
             text-align: center;
             vertical-align:center;
+            color: yellow;
             margin-top:2cm;
         }
         button.info {
@@ -24,15 +25,17 @@
         }
         .t-center {
             text-align: center;
+            color: white
         }
         .details {
             font: bold 50px/1.0 arial,sans-serif;
             text-align: center;
             padding-top:2cm;
+            color: black;
         }
     </style>
 </head>
-<body>
+<body background = "Dva.jpg">
     <div class="container">
         <div class="result";>Start</div>
          <div class="details"></div>
@@ -41,7 +44,7 @@
                     rel="tooltip" title="不停点击按钮或者按住任意按键触发，停下来达到1.5之后秒自动揭晓，并冻结5秒"
                     >生成随机数</button>
         </div>
-        <div class="t-center">
+        <div class="t-center";color:#000000>
             Powered by Monkeydbobo
         </div>
     </div>
